--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,26 @@
 services:
+  # --- BACKEND (FastAPI) ---
   - type: web
-    name: 8cubeBD
+    name: 8cubeAPI
     env: python
+    plan: starter   # persistent storage
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn api:app --host 0.0.0.0 --port 8000
-    plan: starter  # $7–$15/mo tier for persistent storage
     disk:
       name: data
       mountPath: /app
       sizeGB: 10
+    envVars:
+      - key: PORT
+        value: 8000
+
+  # --- FRONTEND (Streamlit) ---
+  - type: web
+    name: 8cubeExplorer
+    env: python
+    plan: free      # free plan is enough for UI
+    buildCommand: pip install -r frontend/requirements.txt
+    startCommand: streamlit run frontend/frontend_app.py --server.port 8501 --server.address 0.0.0.0
+    envVars:
+      - key: PORT
+        value: 8501
