--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 fastapi>=0.115.0
-uvicorn>=0.30.0
-pandas>=2.0.0
+uvicorn[standard]>=0.32.0
+python-multipart>=0.0.9
+sse-starlette>=2.0.0
+
+# MCP Server
 mcp>=1.0.0
+
+# HTTP client for mcp_server.py
 httpx>=0.27.0
+
+# Data processing
+pandas>=2.0.0
